@@ -28,7 +28,7 @@ __pthread_cond_init (pthread_cond_t *cond, const pthread_condattr_t * attr)
   *cond = (pthread_cond_t) __PTHREAD_COND_INITIALIZER;
 
   if (attr == NULL
-      || memcmp (attr, &__pthread_default_condattr, sizeof (*attr) == 0))
+      || memcmp (attr, &__pthread_default_condattr, sizeof (*attr)) == 0)
     /* Use the default attributes.  */
     return 0;
 
