@@ -27,7 +27,7 @@ _pthread_rwlock_init (pthread_rwlock_t *rwlock,
   *rwlock = (pthread_rwlock_t) __PTHREAD_RWLOCK_INITIALIZER;
 
   if (attr == NULL
-      || memcmp (attr, &__pthread_default_rwlockattr, sizeof (*attr) == 0))
+      || memcmp (attr, &__pthread_default_rwlockattr, sizeof (*attr)) == 0)
     /* Use the default attributes.  */
     return 0;
 
